--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <form id="form"> <input type="text" id="search" placeholder="Search By Location" autocomplete="off"> </form>
-  <main id="main"></main>
-    <script src="./js/script.js"></script>   
+  <form id="form">
+      <input type="text" id="search" placeholder="Search By Loaction" autocomplete="off">
+  </form>
+  <main id="main">
+
+  </main>
+
+  <script src="js/app.js"></script>
 </body>
+
 </html>
