--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <form id="form">
-      <input type="text" id="search" placeholder="Search By Loaction" autocomplete="off">
+      <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
   <main id="main">
 
