--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
                       <div id="w-search-tip" class="tooltiptext text-light">
                         <p>You can get weather by city name or city name and <a href="https://www.iso.org/obp/ui/#search" class="text-accent" target="_blank">iso country code (alpha-2 code</a> divided by comma.</p>
                         <h5>Example:</h5>
-                        
+                        <p class="text-white"><strong>London, uk</strong></p>
                       </div>
+                      <input type="text" id="location" data-tooltip="#w-search-tip">
                     </form>
+                    <span class="glyphicon glyphicon-map-marker"></span>
                   </div>
+                  <div class="col-xs-5 text-right"><span id="date"></span></div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-3 col-xs-offset-9 text-right"></div>
                 </div>
               </div>
             </div>
