weather app application

--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
                 </div>
                 <div class="row">
                   <div class="col-xs-3 col-xs-offset-9 text-right"></div>
+                  <div class="unit-block text-accent text-left"></div>
+                  <div class="onoffswitch">
+                    <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="unit-switch" checked> 
+                    <label class="onoffswitch-label" for="unit-switch">
+                      <span class="onoffswitch-inner"></span>
+                      <span class="onoffswitch-switch"></span>
+                    </label>                 
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        
       </section>
     </div>
   </div>
