--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@
             </div>
           </div>
         </div>
-        
+        <div class="row text-white w-main">
+          <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+            <div class="text-center">
+              <i id="wicon-main" class="wi wi-main"></i>
+              <span id="temperature"></span>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 w-desc-box">
+                <p id="description" class="text-capitalize"></p>
+                <p><span id="humidity"></span><i class="wi wi-humidity"></i> Humidity</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </div>
