weather app application

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                   <div class="col-xs-5 text-right"><span id="date"></span></div>
                 </div>
                 <div class="row">
-                  <div class="col-xs-3 col-xs-offset-9 text-right"></div>
-                  <div class="unit-block text-accent text-left"></div>
+                  <div class="col-xs-3 col-xs-offset-9 text-right">
+                  <div class="unit-block text-accent text-left">
                   <div class="onoffswitch">
                     <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="unit-switch" checked> 
                     <label class="onoffswitch-label" for="unit-switch">
@@ -64,6 +64,23 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="container card-section">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 col-md-offset-3">
+          <div class="days-box row text-center bg-white">
+            <div class="col-xs-3 day-first">
+              <p class="day"></p>
+              <hr class="hr-title hr-title-primary">
+              <p><i class="wi"></i></p>
+              <p><span class="d-minn-temp"></span> <span class="d-max-temp"></span></p>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
       </section>
     </div>
   </div>
