--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
               <p><i class="wi"></i></p>
               <p><span class="d-minn-temp"></span> <span class="d-max-temp"></span></p>
             </div>
-            
+            <div class="col-xs-3">
+              <p class="day"></p>
+              <hr class="hr-title hr-title-primary">
+              <p><i class="wi"></i></p>
+              <p><span class="d-min-temp"></span> <span class="d-max-temp"></span></p>
+            </div>
+            <div class=""></div>
           </div>
         </div>
       </div>
