--- a/index.html
+++ b/index.html
@@ -82,7 +82,18 @@
               <p><i class="wi"></i></p>
               <p><span class="d-min-temp"></span> <span class="d-max-temp"></span></p>
             </div>
-            <div class=""></div>
+            <div class="col-xs-3">
+              <p class="day"></p>
+              <hr class="hr-title hr-title-primary">
+              <p><i class="wi"></i></p>
+              <p><span class="d-min-temp"></span> <span class="d-max-temp"></span></p>
+            </div>
+            <div class="col-xs-3">
+              <p class="day"></p>
+              <hr class="hr-title hr-title-primary">
+              <p><i class="wi"></i></p>
+              <p><span class="d-min-temp"></span> <span class="d-max-temp"></span></p>
+            </div>
           </div>
         </div>
       </div>
@@ -98,6 +109,7 @@
   </main> -->
 
   <script src="./js/app.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 </body>
 
 </html>
