weather app application

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       </section>
     </div>
   </div>
+  <div></div>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
