weather app application

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     </div>
   </div>
   <div></div>
+  <span></span>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
