--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
   </div>
   <div></div>
-  <span></span>
+  <span class=""></span>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
