weather app application

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
     </div>
   </div>
-  <div></div>
+  <div class=""></div>
   <span class=""></span>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
