weather app application

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   </div>
   <div class=""></div>
   <span class=""></span>
+  <div class=""></div>
+  <span class=""></span>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
