weather app application

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   <h5></h5>
   <h6></h6>
   <p></p>
+  <div></div>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
