--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
   <h6></h6>
   <p></p>
   <div></div>
+  <span></span>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
