weather app application

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   <p></p>
   <div></div>
   <span></span>
+  <section></section>
   <!-- <form id="form">
       <input type="text" id="search" placeholder="Search By Location" autocomplete="off">
   </form>
